--- a/catalog_service/Dockerfile
+++ b/catalog_service/Dockerfile
@@ -1,20 +1,26 @@
-FROM python:3.10
+# Base da imagem
+FROM python:3.11-slim
 
+# Diretório de trabalho
 WORKDIR /app
 
-COPY requirements.txt .
-RUN pip install -r requirements.txt
+# Instalar dependências do sistema
+RUN apt-get update && apt-get install -y \
+    netcat-openbsd \
+    curl \
+ && rm -rf /var/lib/apt/lists/*
 
-# Instala netcat-openbsd para o wait-for-it funcionar
-RUN apt-get update && apt-get install -y netcat-openbsd curl && rm -rf /var/lib/apt/lists/*
-
+# Copiar ficheiros para dentro do container
 COPY . .
 
-# Tornar o script executável
+# Permitir execução do wait-for-it.sh
 RUN chmod +x wait-for-it.sh
 
-# Expor porta
+# Instalar dependências Python
+RUN pip install --upgrade pip && pip install -r requirements.mongodb.txt
+
+# Expõe a porta da API Flask
 EXPOSE 8000
 
-# CORRIGIDO: usar o nome correto do container da base de dados
-CMD ["./wait-for-it.sh", "ualflix_db_master", "5432", "--", "python", "app.py"]
+# Comando default (vai ser substituído pelo entrypoint do docker-compose)
+CMD ["python", "app.py"]
