--- a/streaming_service/Dockerfile
+++ b/streaming_service/Dockerfile
@@ -2,8 +2,8 @@ FROM python:3.10
 
 WORKDIR /app
 
-COPY requirements.txt .
-RUN pip install -r requirements.txt
+COPY requirements.mongodb.txt .
+RUN pip install -r requirements.mongodb.txt
 
 RUN apt-get update && apt-get install -y \
     ffmpeg \
