--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -1,64 +1,161 @@
+# Upstream para Authentication Service
+upstream auth_backend {
+    least_conn;
+    server authentication_service:8000 max_fails=3 fail_timeout=30s;
+    keepalive 16;
+}
+
+# Upstream para Catalog Service
+upstream catalog_backend {
+    least_conn;
+    server catalog_service:8000 max_fails=3 fail_timeout=30s;
+    keepalive 16;
+}
+
+# Upstream para Streaming Service
+upstream streaming_backend {
+    ip_hash;
+    server streaming_service:8001 max_fails=3 fail_timeout=30s;
+    keepalive 16;
+}
+
+# Upstream para Admin Service
+upstream admin_backend {
+    # round_robin é o padrão, não precisa declarar
+    server admin_service:8002 max_fails=3 fail_timeout=30s;
+    keepalive 16;
+}
+
+# Servidor principal - Frontend e API Gateway
 server {
-    listen 8080;  # ✅ Mudança aqui: nginx escuta na porta 8080
+    listen 8080;
     server_name localhost;
     client_max_body_size 1024M;
-
-    # Frontend (React app) - ROTA PRINCIPAL
+    
+    # Timeouts
+    proxy_connect_timeout 5s;
+    proxy_send_timeout 60s;
+    proxy_read_timeout 60s;
+    
+    # Headers comuns
+    proxy_set_header Host $host;
+    proxy_set_header X-Real-IP $remote_addr;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header X-Forwarded-Proto $scheme;
+    
+    # Frontend React - ROTA PRINCIPAL
     location / {
         proxy_pass http://frontend:3000;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "upgrade";
-        proxy_set_header Host $host;
         proxy_cache_bypass $http_upgrade;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
     }
 
-    # Authentication API - ROTA PARA AUTH
+    # Authentication API
     location /api/auth/ {
         rewrite ^/api/auth(/.*)$ $1 break;
-        proxy_pass http://authentication_service:8000;
+        proxy_pass http://auth_backend;
         proxy_http_version 1.1;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_connect_timeout 5s;
-        proxy_send_timeout 60s;
-        proxy_read_timeout 60s;
     }
 
-    # Admin API - ROTA PARA ADMIN
+    # Admin API
     location /api/admin/ {
         rewrite ^/api/admin(/.*)$ /api/admin$1 break;
-        proxy_pass http://admin_service:8002;
+        proxy_pass http://admin_backend;
         proxy_http_version 1.1;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
     }
 
-    # Catalog API - ROTA PARA CATALOG
+    # Catalog API
     location /api/ {
         rewrite ^/api(/.*)$ $1 break;
-        proxy_pass http://catalog_service:8000;
+        proxy_pass http://catalog_backend;
+        proxy_http_version 1.1;
+        
+        # Timeouts maiores para uploads
+        proxy_connect_timeout 30s;
+        proxy_send_timeout 300s;
+        proxy_read_timeout 300s;
+    }
+
+    # Streaming
+    location /stream/ {
+        proxy_pass http://streaming_backend/stream/;
+        proxy_http_version 1.1;
+        proxy_set_header Range $http_range;
+        proxy_buffering off;
+        proxy_cache off;
+        
+        # Timeouts para streaming
+        proxy_connect_timeout 10s;
+        proxy_send_timeout 600s;
+        proxy_read_timeout 600s;
+    }
+    
+    # Health check para NGINX
+    location /nginx_health {
+        access_log off;
+        return 200 "NGINX Load Balancer OK\n";
+        add_header Content-Type text/plain;
+    }
+}
+
+# Servidores dedicados para acesso direto
+server {
+    listen 8000;
+    server_name localhost;
+    
+    location / {
+        proxy_pass http://auth_backend;
         proxy_http_version 1.1;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
     }
+}
 
-    # Streaming - ROTA PARA STREAMING
-    location /stream/ {
-        proxy_pass http://streaming_service:8001/stream/;
+server {
+    listen 8001;
+    server_name localhost;
+    client_max_body_size 1024M;
+    
+    location / {
+        proxy_pass http://catalog_backend;
         proxy_http_version 1.1;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header Range $http_range;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        
+        # Timeouts para uploads
+        proxy_connect_timeout 30s;
+        proxy_send_timeout 300s;
+        proxy_read_timeout 300s;
+    }
+}
+
+server {
+    listen 8002;
+    server_name localhost;
+    
+    location / {
+        proxy_pass http://admin_backend;
+        proxy_http_version 1.1;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    }
+}
+
+server {
+    listen 8003;
+    server_name localhost;
+    
+    location / {
+        proxy_pass http://streaming_backend;
+        proxy_http_version 1.1;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_buffering off;
         proxy_cache off;
     }
