--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,9 @@
+
 services:
-  # MongoDB Primary
+  # ================================================================
+  # MONGODB REPLICA SET - Mantém nomes fixos (necessário para RS)
+  # ================================================================
+  
   ualflix_db_primary:
     image: mongo:6.0
     container_name: ualflix_db_primary
@@ -21,7 +25,6 @@ services:
       retries: 5
       start_period: 30s
 
-  # MongoDB Secondary
   ualflix_db_secondary:
     image: mongo:6.0
     container_name: ualflix_db_secondary
@@ -42,7 +45,6 @@ services:
       retries: 5
       start_period: 30s
 
-  # MongoDB Arbiter
   ualflix_db_arbiter:
     image: mongo:6.0
     container_name: ualflix_db_arbiter
@@ -101,23 +103,58 @@ services:
         
         sleep(15000);
         
+        // Inicializar base de dados com admin correto
         db = db.getSiblingDB('ualflix');
+        
+        // Criar coleções
         db.createCollection('users');
         db.createCollection('videos');
         db.createCollection('video_views');
+        db.createCollection('replication_test');
         
-        db.users.createIndex({ 'username': 1 }, { unique: true });
-        db.videos.createIndex({ 'user_id': 1 });
+        // Criar índices
+        try {
+          db.users.createIndex({ 'username': 1 }, { unique: true });
+          db.users.createIndex({ 'email': 1 });
+          db.videos.createIndex({ 'user_id': 1 });
+          db.videos.createIndex({ 'status': 1 });
+          db.video_views.createIndex({ 'video_id': 1 });
+          db.replication_test.createIndex({ 'test_id': 1 });
+          print('Índices criados');
+        } catch(e) {
+          print('Índices já existem');
+        }
         
-        if (!db.users.findOne({username: 'admin'})) {
-          db.users.insertOne({
+        // Criar usuário admin SIMPLES (sem hash complexo)
+        var existingAdmin = db.users.findOne({username: 'admin'});
+        if (!existingAdmin) {
+          var adminUser = {
             username: 'admin',
             email: 'admin@ualflix.com',
-            password: 'pbkdf2:sha256:260000\\$salt\\$hash',
+            password: 'admin_temp_will_be_hashed_by_app',
             is_admin: true,
-            created_at: new Date()
-          });
-          print('Admin user criado');
+            created_at: new Date(),
+            updated_at: new Date(),
+            temp_password: true
+          };
+          
+          db.users.insertOne(adminUser);
+          print('✅ Admin criado - Username: admin, Password: admin');
+        } else {
+          print('Admin já existe');
+          // Garantir que é admin
+          db.users.updateOne(
+            {username: 'admin'}, 
+            {\$set: {is_admin: true, updated_at: new Date()}}
+          );
+        }
+        
+        // Verificar
+        var adminCheck = db.users.findOne({username: 'admin'});
+        if (adminCheck && adminCheck.is_admin) {
+          print('✅ Admin verificado com sucesso');
+        } else {
+          print('❌ Erro na verificação do admin');
         }
         
         print('Base de dados configurada');
@@ -125,7 +162,10 @@ services:
         echo 'Setup MongoDB concluido!';
       "
 
-  # RabbitMQ
+  # ================================================================
+  # RABBITMQ - Mantém nome fixo (messaging queue)
+  # ================================================================
+  
   queue_service:
     image: rabbitmq:3-management
     container_name: queue_service
@@ -145,31 +185,14 @@ services:
       retries: 3
       start_period: 40s
 
-  # Streaming Service
-  streaming_service:
-    build: ./streaming_service
-    container_name: streaming_service
-    restart: unless-stopped
-    ports:
-      - "8003:8001"
-    volumes:
-      - ./video_data:/videos:ro
-    networks:
-      - ualflix_net
-    healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:8001/health"]
-      interval: 30s
-      timeout: 10s
-      retries: 3
-      start_period: 30s
+  # ================================================================
+  # MICROSERVICES - CONFIGURADOS PARA MÚLTIPLAS RÉPLICAS
+  # ================================================================
 
-  # Authentication Service
+  # Authentication Service - 2 Réplicas
   authentication_service:
     build: ./authentication_service
-    container_name: authentication_service
     restart: unless-stopped
-    ports:
-      - "8000:8000"
     environment:
       - MONGODB_CONNECTION_STRING=mongodb://ualflix_db_primary:27017,ualflix_db_secondary:27017,ualflix_db_arbiter:27017/ualflix?replicaSet=ualflix-replica-set
       - MONGODB_PRIMARY_HOST=ualflix_db_primary
@@ -188,14 +211,17 @@ services:
       timeout: 10s
       retries: 3
       start_period: 60s
+    deploy:
+      replicas: 2
+      restart_policy:
+        condition: on-failure
+        delay: 5s
+        max_attempts: 3
 
-  # Catalog Service
+  # Catalog Service - 2 Réplicas  
   catalog_service:
     build: ./catalog_service
-    container_name: catalog_service
     restart: unless-stopped
-    ports:
-      - "8001:8000"
     environment:
       - MONGODB_CONNECTION_STRING=mongodb://ualflix_db_primary:27017,ualflix_db_secondary:27017,ualflix_db_arbiter:27017/ualflix?replicaSet=ualflix-replica-set
       - MONGODB_PRIMARY_HOST=ualflix_db_primary
@@ -213,8 +239,6 @@ services:
         condition: service_completed_successfully
       queue_service:
         condition: service_healthy
-      authentication_service:
-        condition: service_healthy
     networks:
       - ualflix_net
     healthcheck:
@@ -223,14 +247,38 @@ services:
       timeout: 10s
       retries: 3
       start_period: 60s
+    deploy:
+      replicas: 2
+      restart_policy:
+        condition: on-failure
+        delay: 5s
+        max_attempts: 3
 
-  # Admin Service
+  # Streaming Service - 2 Réplicas
+  streaming_service:
+    build: ./streaming_service
+    restart: unless-stopped
+    volumes:
+      - ./video_data:/videos:ro
+    networks:
+      - ualflix_net
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:8001/health"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 30s
+    deploy:
+      replicas: 2
+      restart_policy:
+        condition: on-failure
+        delay: 5s
+        max_attempts: 3
+
+  # Admin Service - 2 Réplicas
   admin_service:
     build: ./admin_service
-    container_name: admin_service
     restart: unless-stopped
-    ports:
-      - "8002:8002"
     environment:
       - MONGODB_CONNECTION_STRING=mongodb://ualflix_db_primary:27017,ualflix_db_secondary:27017,ualflix_db_arbiter:27017/ualflix?replicaSet=ualflix-replica-set
       - MONGODB_PRIMARY_HOST=ualflix_db_primary
@@ -240,8 +288,6 @@ services:
     depends_on:
       mongodb_replica_init:
         condition: service_completed_successfully
-      authentication_service:
-        condition: service_healthy
     networks:
       - ualflix_net
     healthcheck:
@@ -250,14 +296,17 @@ services:
       timeout: 10s
       retries: 3
       start_period: 60s
+    deploy:
+      replicas: 2
+      restart_policy:
+        condition: on-failure
+        delay: 5s
+        max_attempts: 3
 
-  # Video Processor
+  # Video Processor - 2 Réplicas
   video_processor:
     build: ./video_processor
-    container_name: video_processor
     restart: unless-stopped
-    ports:
-      - "8004:8000"
     environment:
       - MONGODB_CONNECTION_STRING=mongodb://ualflix_db_primary:27017,ualflix_db_secondary:27017,ualflix_db_arbiter:27017/ualflix?replicaSet=ualflix-replica-set
       - QUEUE_HOST=queue_service
@@ -272,51 +321,141 @@ services:
         condition: service_healthy
     networks:
       - ualflix_net
+    deploy:
+      replicas: 2
+      restart_policy:
+        condition: on-failure
+        delay: 5s
+        max_attempts: 3
 
-  # Frontend
+  # ================================================================
+  # FRONTEND E LOAD BALANCER
+  # ================================================================
+
+  # Frontend React - 1 Instância
   frontend:
     build: ./frontend
     container_name: frontend
     restart: unless-stopped
-    ports:
-      - "3000:3000"
+    networks:
+      - ualflix_net
     depends_on:
+      - authentication_service
+      - catalog_service
+      - admin_service
+      - streaming_service
+
+  # NGINX Load Balancer - CONFIGURADO PARA BALANCEAR RÉPLICAS
+  nginx:
+    image: nginx:latest
+    container_name: nginx_loadbalancer
+    restart: unless-stopped
+    ports:
+      - "8080:8080"
+      - "8000:8000"   # Auth service
+      - "8001:8001"   # Catalog service  
+      - "8002:8002"   # Admin service
+      - "8003:8003"   # Streaming service
+    volumes:
+      - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
+      - ./nginx/conf.d/default.conf:/etc/nginx/conf.d/default.conf:ro
+    depends_on:
+      - frontend
       - authentication_service
       - catalog_service
       - admin_service
       - streaming_service
     networks:
       - ualflix_net
+    healthcheck:
+      test: ["CMD", "nginx", "-t"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
 
-  # NGINX
-  nginx:
-    image: nginx:latest
-    container_name: nginx
+  # ================================================================
+  # MONITORING E MÉTRICAS
+  # ================================================================
+
+  # Prometheus - Coleta métricas de todas as réplicas
+  prometheus:
+    image: prom/prometheus:latest
+    container_name: prometheus
     restart: unless-stopped
     ports:
-      - "8080:8080"
+      - "9090:9090"
     volumes:
-      - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
-      - ./nginx/conf.d/default.conf:/etc/nginx/conf.d/default.conf:ro
-    depends_on:
-      frontend:
-        condition: service_started
-      authentication_service:
-        condition: service_healthy
-      catalog_service:
-        condition: service_healthy
-      admin_service:
-        condition: service_healthy
-      streaming_service:
-        condition: service_healthy
+      - ./monitoring/prometheus.yml:/etc/prometheus/prometheus.yml:ro
+      - ./monitoring/alert.rules:/etc/prometheus/alert.rules:ro
+      - prometheus_data:/prometheus
+    command:
+      - '--config.file=/etc/prometheus/prometheus.yml'
+      - '--storage.tsdb.path=/prometheus'
+      - '--web.console.libraries=/etc/prometheus/console_libraries'
+      - '--web.console.templates=/etc/prometheus/consoles'
+      - '--storage.tsdb.retention.time=200h'
+      - '--web.enable-lifecycle'
     networks:
       - ualflix_net
+    depends_on:
+      - admin_service
+      - authentication_service
+      - catalog_service
+
+  # Grafana - Dashboard com métricas de réplicas
+  grafana:
+    image: grafana/grafana:latest
+    container_name: grafana
+    restart: unless-stopped
+    ports:
+      - "3001:3000"
+    environment:
+      - GF_SECURITY_ADMIN_PASSWORD=admin
+      - GF_USERS_ALLOW_SIGN_UP=false
+      - GF_INSTALL_PLUGINS=grafana-clock-panel,grafana-simple-json-datasource
+    volumes:
+      - grafana_data:/var/lib/grafana
+      - ./monitoring/grafana/provisioning:/etc/grafana/provisioning
+    networks:
+      - ualflix_net
+    depends_on:
+      - prometheus
+
+# ================================================================
+# NETWORKS E VOLUMES
+# ================================================================
 
 networks:
   ualflix_net:
     driver: bridge
+    ipam:
+      config:
+        - subnet: 172.20.0.0/16
 
 volumes:
   mongo_primary_data:
   mongo_secondary_data:
   mongo_arbiter_data:
+  prometheus_data:
+  grafana_data:
+
+# ================================================================
+# CONFIGURAÇÃO DE ESCALA PADRÃO
+# ================================================================
+
+# Para usar este docker-compose com réplicas automáticas:
+# docker-compose down
+# Para usar este docker-compose com réplicas automáticas:
+# docker-compose up -d
+# 
+# Para verificar réplicas:
+# docker-compose ps
+#
+# Para escalar manualmente um serviço específico:
+# docker-compose up -d --scale authentication_service=3
+#
+# Para ver distribuição de carga:
+# curl http://localhost:8000/health  (várias vezes)
+#
+# Para simular falha:
+# docker stop $(docker ps -q --filter "name=authentication_service" | head -1)
