--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -3,25 +3,46 @@ worker_processes auto;
 error_log /var/log/nginx/error.log warn;
 pid /var/run/nginx.pid;
 
+# Configurações para balanceamento de carga
+worker_rlimit_nofile 65535;
+
 events {
-    worker_connections 1024;
+    worker_connections 4096;
+    use epoll;
+    multi_accept on;
 }
 
 http {
     include /etc/nginx/mime.types;
     default_type application/octet-stream;
     
+    # Log format com informações de load balancing
     log_format main '$remote_addr - $remote_user [$time_local] "$request" '
                     '$status $body_bytes_sent "$http_referer" '
-                    '"$http_user_agent" "$http_x_forwarded_for"';
+                    '"$http_user_agent" "$http_x_forwarded_for" '
+                    'upstream: $upstream_addr response_time: $upstream_response_time';
+    
+    log_format balancer '$remote_addr - [$time_local] "$request" '
+                       'status: $status bytes: $body_bytes_sent '
+                       'upstream: $upstream_addr '
+                       'response_time: $upstream_response_time '
+                       'replica: "$upstream_cache_status"';
     
     access_log /var/log/nginx/access.log main;
     
+    # Configurações de performance
     sendfile on;
     tcp_nopush on;
     tcp_nodelay on;
     keepalive_timeout 65;
     types_hash_max_size 2048;
+    server_tokens off;
+    
+    # Configurações de buffer para load balancing
+    proxy_buffering on;
+    proxy_buffer_size 128k;
+    proxy_buffers 4 256k;
+    proxy_busy_buffers_size 256k;
     
     # Gzip Settings
     gzip on;
@@ -29,8 +50,32 @@ http {
     gzip_vary on;
     gzip_proxied any;
     gzip_comp_level 6;
-    gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript;
+    gzip_types
+        text/plain
+        text/css
+        text/xml
+        text/javascript
+        application/json
+        application/javascript
+        application/xml+rss
+        application/atom+xml
+        image/svg+xml;
+    
+    # Rate limiting para proteção
+    limit_req_zone $binary_remote_addr zone=api:10m rate=10r/s;
+    limit_req_zone $binary_remote_addr zone=upload:10m rate=2r/s;
+    
+    # Configurações específicas para réplicas
+    proxy_next_upstream error timeout invalid_header http_500 http_502 http_503 http_504;
+    proxy_next_upstream_tries 3;
+    proxy_next_upstream_timeout 10s;
+    
+    # Headers de segurança
+    add_header X-Frame-Options "SAMEORIGIN" always;
+    add_header X-Content-Type-Options "nosniff" always;
+    add_header X-XSS-Protection "1; mode=block" always;
+    add_header Referrer-Policy "no-referrer-when-downgrade" always;
     
     # Include virtual host configs
     include /etc/nginx/conf.d/*.conf;
-} 
+}
